# auto-daily-health-report

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.py  auto-report.cron  captcha.py  checkin.py  login.py  recent.py  requirements.txt  utils.py  webvpn.py  workflow.py
.github/workflows/: python.yml
assets/: report-with-github-actions.md
src/: lib.rs  main.rs
src/reporter/: client.rs  constant.rs  encrypt.rs  login.rs  mod.rs  pipeline.rs  query.rs  report.rs  utils.rs
