[package]
name = "xmu-health-report-rust-sdk"
description = "A CLI / SDK intending to simplify XMU Daily Health Report process"
version = "0.1.5"
edition = "2018"
license = "MIT"
repository = "https://github.com/kirainmoe/auto-daily-health-report"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
aes = "0.7.5"
block-modes = "0.8.1"
rand = "0.8.4"
regex = "1.5.4"
base64 = "0.13.0"
serde = "1.0.130"
serde_json = "1.0.68"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
anyhow = "1"
